# sse-exed-studio-control

./: .git-blame-ignore-revs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  engineering_task.md
.github/workflows/: ci.yml  codeql.yml  dev-checks.yml
docs/: ARCHITECTURE.md  DEVELOPER_QUICKSTART.md  DEVELOPMENT.md  FRONTEND_CUTOVER_PLAN.md  FRONTEND_STRATEGY_RESET.md  GREENFIELD_FRONTEND_RECOMMENDATION.md  HANDOFF.md  HARDWARE_PROFILE.md  OPERATIONS.md  OPERATOR_WORKSTATION_ROLLOUT.md  PRODUCTIZATION_PLAN.md  QT_FALLBACK_RETIREMENT_AUDIT.md  RELEASE.md  UX_AUDIT.md  WINDOWS_TARGET_HOST_EVIDENCE.md  audio-prototype-parity-progress.md  repo-professionalization-progress.md
docs/adr/: 0001-frontend-replatform.md
docs/archive/: DESKTOP_ARCHITECTURE_PLAN.md  FRONTEND_CUTOVER_PLAN.md  FRONTEND_STRATEGY_RESET.md  GREENFIELD_FRONTEND_RECOMMENDATION.md  NATIVE_PARITY_HANDOFF.md  QT_FALLBACK_RETIREMENT_AUDIT.md  UX_AUDIT.md
docs/plans/: audio-phase-3-gold-standard-polish.md  audio-ui-gold-standard-progress.md  audio-ui-phase-3-followup-fixes.md  lighting-fixture-catalog-implementation.md  responsive-operator-layout-implementation.md  stage-plot-fixture-identity-implementation.md
docs/redesign/: audio-gold-standard-audit.md  audio.md  dashboard-header.md  lighting-d-industry-audit.md  lighting-d-premium-plan.md  lighting-d-premium-target.md  lighting-d-wave-30a-design.md  lighting-d-wave-33-blind-mode.md  lighting-d-wave-34-palettes.md  lighting-direction-d-audit-fix-plan.md  lighting-direction-d-followups.md  lighting-direction-d-implementation-plan.md  lighting-direction-d-polish-plan.md  lighting-direction-d-polish-waves-19-22-plan.md  lighting.md  planning.md  setup.md
frontend/app/: index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
native/: Cargo.toml  README.md  clippy.toml
native/installer-templates/: tauri-installscript.qs
native/protocol/: v1.contract.json  v1.md
native/protocol/rust/: Cargo.toml
native/protocol/rust/src/: lib.rs
native/qt-shell/: CMakeLists.txt  README.md
native/qt-shell/assets/icons/lucide/: LICENSE.txt
native/qt-shell/qml/: ConsoleBadge.qml  ConsoleButton.qml  ConsoleChipRow.qml  ConsoleCueRail.qml  ConsoleDmxPeek.qml  ConsoleFixtureBadge.qml  ConsoleGoBar.qml  ConsoleIcon.qml  ConsoleInspector.qml  ConsoleKanbanCard.qml  ConsoleScheduleBlock.qml  ConsoleStagePlot.qml  ConsoleStatChipRow.qml  ConsoleStepHeader.qml  ConsoleTheme.qml  ConsoleTimeline.qml  ConsoleUnscheduledTray.qml  DashboardHeaderPanel.qml  LightingContentPanel.qml  LightingParityHelpers.js  LightingWorkspacePanel.qml  Main.qml  OperatorShortcutLayer.qml  ParityCaptureHarness.qml  PlanningWorkspacePanel.qml  SetupWorkspacePanel.qml
native/qt-shell/src/: EngineProcess.cpp  EngineProcess.h
native/qt-shell/tests/qml/: tst_DashboardHeaderPanel.qml  tst_LightingWorkspacePanel.qml  tst_OperatorShortcutLayer.qml  tst_PlanningWorkspacePanel.qml
native/rust-engine/: Cargo.toml
native/rust-engine/src/: app.rs  app_state.rs  audio_backend.rs  audio_meter_fixture.rs  bootstrap.rs  commissioning.rs  control_surface.rs  legacy_import.rs  lighting.rs  lighting_backend.rs  main.rs  planning.rs  planning_settings.rs  protocol.rs  rme_totalmix_osc.rs  shell_settings.rs  storage.rs  support.rs
native/rust-engine/src/audio/: channels.rs  clips.rs  helpers.rs  mix_targets.rs  mod.rs  parse.rs  settings.rs  snapshot.rs  snapshots.rs  sync.rs  tests.rs  types.rs
native/rust-engine/src/lighting/: cues.rs  editor_state.rs  fade.rs  fixtures.rs  groups.rs  helpers.rs  identify.rs  legacy_import.rs  mod.rs  palettes.rs  parse.rs  preview.rs  scenes.rs  settings.rs  snapshot.rs  tests.rs  types.rs
native/rust-engine/src/lighting/fixture_catalog/: mod.rs
native/rust-engine/src/planning/: checklist.rs  helpers.rs  mod.rs  parse.rs  projects.rs  reads.rs  selection.rs  settings.rs  snapshot.rs  tasks.rs  tests.rs  timer.rs  types.rs
native/rust-engine/tests/: contract.rs  end_to_end.rs
native/scripts/: tauri-before-command.mjs
native/tauri-shell/: Cargo.toml  README.md  tauri.conf.json
native/tauri-shell/capabilities/: default.json
native/tauri-shell/icons/: icon.icns
native/tauri-shell/scripts/: tauri-before-command.mjs
native/tauri-shell/src/: engine.rs  main.rs
scripts/: README.md  check-slice-rescope.mjs  check-slice-rescope.test.mjs  clean.mjs  dev-doctor.mjs  disk-space.mjs  disk-space.test.mjs  file-health.mjs  native-control-surface-qualification.mjs  native-delivery-acceptance.mjs  native-installer-acceptance.mjs  native-installer.mjs  native-installer.test.mjs  native-package.mjs  native-packaged-acceptance.mjs  native-parity-acceptance.mjs  native-parity-capture.mjs  native-release-build.mjs  native-release-identity.json  native-release-runtime.json  native-release-runtime.mjs  native-runtime-harness.mjs  native-sign-windows.mjs  native-update-repo.mjs  native-update-repo.test.mjs  native-windows-release-evidence.mjs  qt-ifw-tools.mjs  qt-ifw-tools.test.mjs  tauri-before-command.mjs  tauri-candidate-ifw.mjs  tauri-package-candidate.mjs  tauri-qualification-evidence.mjs  tauri-setup-support-qualification.mjs  tauri-smoke.mjs  tauri-visual-review.mjs  tauri-visual-review.test.mjs  tauri-windows-target-evidence.mjs  tauri-workspace-qualification.mjs  verify-native-release-artifacts.mjs  verify-native-release-continuity.mjs  (+2 more)
scripts/frontend/: run-playwright.mjs  storybook-static-server.mjs
scripts/legacy/: README.md  tauri-candidate-ifw.mjs  tauri-package-candidate.mjs  tauri-windows-target-evidence.mjs  verify-tauri-candidate-artifacts.mjs
scripts/protocol/: generate-protocol-artifacts.mjs
scripts/release/: helpers.mjs  helpers.test.mjs  preflight.mjs  preflight.test.mjs  publish-release.mjs  publish-release.test.mjs  validate-release.mjs  (+5 more)
(+228 files in other folders)
