[workspace]
resolver = "2"
members = ["protocol/rust", "rust-engine", "tauri-shell"]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
studio-control-protocol = { path = "protocol/rust" }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
# Pinned to a minor range so generated TypeScript stays stable. Bumping
# the minor must be paired with a `npm run protocol:generate` regen run
# and a check of any diff in frontend/packages/engine-client/src/generated/.
ts-rs = { version = "12", features = ["serde-compat"] }

# Workspace-wide lints. Tightening from `warn` to `deny` is a follow-up item
# once Phase 3 splits land and the existing 10 default-clippy warnings are
# triaged.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
