[workspace]
resolver = "2"
members = ["protocol/rust", "rust-engine", "tauri-shell"]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rosc = "0.11.4"
studio-control-protocol = { path = "protocol/rust" }
# Pinned to a minor range so generated TypeScript stays stable. Bumping
# the minor must be paired with a `npm run protocol:generate` regen run
# and a check of any diff in frontend/packages/engine-client/src/generated/.
ts-rs = { version = "12", features = ["serde-compat"] }

# Workspace-wide lints. The root `rust:clippy` npm lane denies warnings so
# warning regressions fail the local and CI health gates.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
