[package]
name = "sse-exed-tauri-shell"
version = "2.2.1"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# Enables the shell_test_bridge_* Tauri commands used by Playwright + smoke
# harnesses to drive the shell over a file-backed status/command channel.
# Production builds must NOT enable this feature.
test-bridge = []

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
studio-control-protocol.workspace = true
tauri = { version = "2.11.1", features = [] }

[lints]
workspace = true
